<resources>
    <string name="app_name">AlarmNoti</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="alarm_message">Alarm Message</string>
    <string name="alarm_off_off">Alarm Off : Off</string>
    <string name="alarm_off_on">Alarm Off : On</string>
    <string name="dash"> ~ </string>
    <string name="start">Start</string>
    <string name="access_fail">Access Fail</string>
    <string name="access_fail_comment">Check your notification for access.</string>
    <string name="back">Back</string>
    <string name="access_account_comment">Choose access account from below list.</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="calendar_alarm">Calendar Alarm</string>
    <string name="add_calendar_event">Add Calendar Event</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="restart_app">Restart app_</string>
    <string name="delete_all">Delete All</string>
    <string name="title">Title</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="during">During</string>
    <string name="recurrance">Recurrance</string>
    <string name="zero">0</string>
    <string name="addalarm_starttime_empty">Recurrance</string>
    <string name="addalarm_endtime_empty">Recurrance</string>
    <string name="addalarm_mon">Mon</string>
    <string name="addalarm_tue">Tue</string>
    <string name="addalarm_wed">Wed</string>
    <string name="addalarm_thu">Thu</string>
    <string name="addalarm_fri">Fri</string>
    <string name="addalarm_sat">Sat</string>
    <string name="addalarm_sun">Sun</string>
    <string name="every_year">Every Year</string>
    <string name="every_month">Every Month</string>
    <string name="every_week">Every Week</string>
    <string name="time_zero">00:00</string>
    <string name="time_one_minute">00:01</string>
    <string name="colon">:</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="test">Test</string>
    <string name="list_all">List all</string>
    <string name="list_with_calendar">List with calendar</string>
    <string name="delete_account">Delete Account</string>

</resources>
